Minor changes to playground.ipynb

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "33e3b49c",
    "metadata": {},
    "outputs": [],
@@ -12,30 +12,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c8bb20a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileExistsError",
+     "evalue": "[Errno 17] File exists: '../../workspaces/practicalbusinesspython'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32m/workspaces/practicalbusinesspython/playground.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://codespaces%2Bimproved-space-barnacle-r94wrqw59rr2xxj9/workspaces/practicalbusinesspython/playground.ipynb#W1sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m os\u001b[39m.\u001b[39;49mmkdir(\u001b[39m'\u001b[39;49m\u001b[39m../../workspaces/practicalbusinesspython\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[0;31mFileExistsError\u001b[0m: [Errno 17] File exists: '../../workspaces/practicalbusinesspython'"
+     ]
+    }
+   ],
    "source": [
-    "os.mkdir('../../evaluatiies/nieuwe_folder')"
+    "os.mkdir('../../workspaces/practicalbusinesspython')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "60c87e57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/workspaces/practicalbusinesspython'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "812599b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/workspaces/practicalbusinesspython'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.getcwd()"
    ]
@@ -62,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "590641a3",
    "metadata": {},
    "outputs": [],
@@ -72,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4e8ef425",
    "metadata": {},
    "outputs": [],
@@ -87,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f20cfb15",
    "metadata": {},
    "outputs": [],
@@ -105,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "062ce26f",
    "metadata": {},
    "outputs": [],
@@ -115,10 +149,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "19074c0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "12\n",
+      "24\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/workspaces/practicalbusinesspython/playground.ipynb Cell 11\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bimproved-space-barnacle-r94wrqw59rr2xxj9/workspaces/practicalbusinesspython/playground.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m100\u001b[39m):\n\u001b[0;32m----> <a href='vscode-notebook-cell://codespaces%2Bimproved-space-barnacle-r94wrqw59rr2xxj9/workspaces/practicalbusinesspython/playground.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mnext\u001b[39;49m(gen))\n",
+      "\u001b[1;32m/workspaces/practicalbusinesspython/playground.ipynb Cell 11\u001b[0m line \u001b[0;36m7\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bimproved-space-barnacle-r94wrqw59rr2xxj9/workspaces/practicalbusinesspython/playground.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m p \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bimproved-space-barnacle-r94wrqw59rr2xxj9/workspaces/practicalbusinesspython/playground.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m----> <a href='vscode-notebook-cell://codespaces%2Bimproved-space-barnacle-r94wrqw59rr2xxj9/workspaces/practicalbusinesspython/playground.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mif\u001b[39;00m is_prime(p):\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bimproved-space-barnacle-r94wrqw59rr2xxj9/workspaces/practicalbusinesspython/playground.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m         \u001b[39myield\u001b[39;00m p\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bimproved-space-barnacle-r94wrqw59rr2xxj9/workspaces/practicalbusinesspython/playground.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m     p \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[1;32m/workspaces/practicalbusinesspython/playground.ipynb Cell 11\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bimproved-space-barnacle-r94wrqw59rr2xxj9/workspaces/practicalbusinesspython/playground.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mis_prime\u001b[39m(num):\n\u001b[0;32m----> <a href='vscode-notebook-cell://codespaces%2Bimproved-space-barnacle-r94wrqw59rr2xxj9/workspaces/practicalbusinesspython/playground.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m2\u001b[39m, \u001b[39mint\u001b[39m(np\u001b[39m.\u001b[39;49msqrt(num)) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m):\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bimproved-space-barnacle-r94wrqw59rr2xxj9/workspaces/practicalbusinesspython/playground.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m         \u001b[39mif\u001b[39;00m num \u001b[39m%\u001b[39m i:\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bimproved-space-barnacle-r94wrqw59rr2xxj9/workspaces/practicalbusinesspython/playground.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m             \u001b[39mreturn\u001b[39;00m \u001b[39mFalse\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "for _ in range(100):\n",
     "    print(next(gen))"
@@ -126,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "645537e1",
    "metadata": {},
    "outputs": [],
@@ -138,10 +199,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "6d1d4417",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0^2=0!',\n",
+       " '1^2=1!',\n",
+       " '2^2=4!',\n",
+       " '3^2=9!',\n",
+       " '4^2=16!',\n",
+       " '5^2=25!',\n",
+       " '6^2=36!',\n",
+       " '7^2=49!',\n",
+       " '8^2=64!',\n",
+       " '9^2=81!',\n",
+       " '10^2=100!',\n",
+       " '11^2=121!',\n",
+       " '12^2=144!',\n",
+       " '13^2=169!',\n",
+       " '14^2=196!',\n",
+       " '15^2=225!',\n",
+       " '16^2=256!',\n",
+       " '17^2=289!',\n",
+       " '18^2=324!',\n",
+       " '19^2=361!',\n",
+       " '20^2=400!',\n",
+       " '21^2=441!',\n",
+       " '22^2=484!',\n",
+       " '23^2=529!',\n",
+       " '24^2=576!',\n",
+       " '25^2=625!',\n",
+       " '26^2=676!',\n",
+       " '27^2=729!',\n",
+       " '28^2=784!',\n",
+       " '29^2=841!',\n",
+       " '30^2=900!',\n",
+       " '31^2=961!',\n",
+       " '32^2=1024!',\n",
+       " '33^2=1089!',\n",
+       " '34^2=1156!',\n",
+       " '35^2=1225!',\n",
+       " '36^2=1296!',\n",
+       " '37^2=1369!',\n",
+       " '38^2=1444!',\n",
+       " '39^2=1521!',\n",
+       " '40^2=1600!',\n",
+       " '41^2=1681!',\n",
+       " '42^2=1764!',\n",
+       " '43^2=1849!',\n",
+       " '44^2=1936!',\n",
+       " '45^2=2025!',\n",
+       " '46^2=2116!',\n",
+       " '47^2=2209!',\n",
+       " '48^2=2304!',\n",
+       " '49^2=2401!',\n",
+       " '50^2=2500!',\n",
+       " '51^2=2601!',\n",
+       " '52^2=2704!',\n",
+       " '53^2=2809!',\n",
+       " '54^2=2916!',\n",
+       " '55^2=3025!',\n",
+       " '56^2=3136!',\n",
+       " '57^2=3249!',\n",
+       " '58^2=3364!',\n",
+       " '59^2=3481!',\n",
+       " '60^2=3600!',\n",
+       " '61^2=3721!',\n",
+       " '62^2=3844!',\n",
+       " '63^2=3969!',\n",
+       " '64^2=4096!',\n",
+       " '65^2=4225!',\n",
+       " '66^2=4356!',\n",
+       " '67^2=4489!',\n",
+       " '68^2=4624!',\n",
+       " '69^2=4761!',\n",
+       " '70^2=4900!',\n",
+       " '71^2=5041!',\n",
+       " '72^2=5184!',\n",
+       " '73^2=5329!',\n",
+       " '74^2=5476!',\n",
+       " '75^2=5625!',\n",
+       " '76^2=5776!',\n",
+       " '77^2=5929!',\n",
+       " '78^2=6084!',\n",
+       " '79^2=6241!',\n",
+       " '80^2=6400!',\n",
+       " '81^2=6561!',\n",
+       " '82^2=6724!',\n",
+       " '83^2=6889!',\n",
+       " '84^2=7056!',\n",
+       " '85^2=7225!',\n",
+       " '86^2=7396!',\n",
+       " '87^2=7569!',\n",
+       " '88^2=7744!',\n",
+       " '89^2=7921!',\n",
+       " '90^2=8100!',\n",
+       " '91^2=8281!',\n",
+       " '92^2=8464!',\n",
+       " '93^2=8649!',\n",
+       " '94^2=8836!',\n",
+       " '95^2=9025!',\n",
+       " '96^2=9216!',\n",
+       " '97^2=9409!',\n",
+       " '98^2=9604!',\n",
+       " '99^2=9801!',\n",
+       " '0^2=0!',\n",
+       " '1^2=1!',\n",
+       " '2^2=4!',\n",
+       " '3^2=9!',\n",
+       " '4^2=16!',\n",
+       " '5^2=25!',\n",
+       " '6^2=36!',\n",
+       " '7^2=49!',\n",
+       " '8^2=64!',\n",
+       " '9^2=81!',\n",
+       " '10^2=100!',\n",
+       " '11^2=121!',\n",
+       " '12^2=144!',\n",
+       " '13^2=169!',\n",
+       " '14^2=196!',\n",
+       " '15^2=225!',\n",
+       " '16^2=256!',\n",
+       " '17^2=289!',\n",
+       " '18^2=324!',\n",
+       " '19^2=361!',\n",
+       " '20^2=400!',\n",
+       " '21^2=441!',\n",
+       " '22^2=484!',\n",
+       " '23^2=529!',\n",
+       " '24^2=576!',\n",
+       " '25^2=625!',\n",
+       " '26^2=676!',\n",
+       " '27^2=729!',\n",
+       " '28^2=784!',\n",
+       " '29^2=841!',\n",
+       " '30^2=900!',\n",
+       " '31^2=961!',\n",
+       " '32^2=1024!',\n",
+       " '33^2=1089!',\n",
+       " '34^2=1156!',\n",
+       " '35^2=1225!',\n",
+       " '36^2=1296!',\n",
+       " '37^2=1369!',\n",
+       " '38^2=1444!',\n",
+       " '39^2=1521!',\n",
+       " '40^2=1600!',\n",
+       " '41^2=1681!',\n",
+       " '42^2=1764!',\n",
+       " '43^2=1849!',\n",
+       " '44^2=1936!',\n",
+       " '45^2=2025!',\n",
+       " '46^2=2116!',\n",
+       " '47^2=2209!',\n",
+       " '48^2=2304!',\n",
+       " '49^2=2401!',\n",
+       " '50^2=2500!',\n",
+       " '51^2=2601!',\n",
+       " '52^2=2704!',\n",
+       " '53^2=2809!',\n",
+       " '54^2=2916!',\n",
+       " '55^2=3025!',\n",
+       " '56^2=3136!',\n",
+       " '57^2=3249!',\n",
+       " '58^2=3364!',\n",
+       " '59^2=3481!',\n",
+       " '60^2=3600!',\n",
+       " '61^2=3721!',\n",
+       " '62^2=3844!',\n",
+       " '63^2=3969!',\n",
+       " '64^2=4096!',\n",
+       " '65^2=4225!',\n",
+       " '66^2=4356!',\n",
+       " '67^2=4489!',\n",
+       " '68^2=4624!',\n",
+       " '69^2=4761!',\n",
+       " '70^2=4900!',\n",
+       " '71^2=5041!',\n",
+       " '72^2=5184!',\n",
+       " '73^2=5329!',\n",
+       " '74^2=5476!',\n",
+       " '75^2=5625!',\n",
+       " '76^2=5776!',\n",
+       " '77^2=5929!',\n",
+       " '78^2=6084!',\n",
+       " '79^2=6241!',\n",
+       " '80^2=6400!',\n",
+       " '81^2=6561!',\n",
+       " '82^2=6724!',\n",
+       " '83^2=6889!',\n",
+       " '84^2=7056!',\n",
+       " '85^2=7225!',\n",
+       " '86^2=7396!',\n",
+       " '87^2=7569!',\n",
+       " '88^2=7744!',\n",
+       " '89^2=7921!',\n",
+       " '90^2=8100!',\n",
+       " '91^2=8281!',\n",
+       " '92^2=8464!',\n",
+       " '93^2=8649!',\n",
+       " '94^2=8836!',\n",
+       " '95^2=9025!',\n",
+       " '96^2=9216!',\n",
+       " '97^2=9409!',\n",
+       " '98^2=9604!',\n",
+       " '99^2=9801!',\n",
+       " 'a']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lijnen"
    ]
